# EasyVPN

./: .gitignore
EasyVPN/: README.md  deviceId.json  index.html  package-lock.json  package.json  tsconfig.json
EasyVPN/src/: App.vue  Login.vue  Mine.vue  env.d.ts  main.ts  style.css  vite-env.d.ts
EasyVPN/src-tauri/: Cargo.toml  account.json  build.rs  tauri.conf.json
EasyVPN/src-tauri/resources/config/: config.yaml
EasyVPN/src-tauri/src/: account.rs  clash.rs  commands.rs  common.rs  main.rs  web_login.rs
EasyVPN/src-tauri/temp/: debug.js
EasyVPN/src/components/: ErrorMessage.vue  LeftServiceDays.vue  ServiceExpire.vue  TrialTimer.vue
EasyVPN/src/constants/: messages.ts
EasyVPN/src/types/: account.ts
